fixed overflow issues

--- a/main.css
+++ b/main.css
@@ -93,6 +93,7 @@ body {
   left: 0px;
   top: 5px;
   border: 5px solid black;
+  overflow-y: auto;
 }
 
 .CodexCategories, .CodexArrows, .CodexArrowsSmall, .CodexSubcategories, .CodexEntities {
@@ -148,6 +149,28 @@ body {
   left: 50%;
   top: -40px;
   transform: translateX(-50%);
+  white-space: nowrap;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+  border-radius: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #525252;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(85, 85, 85);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(54, 54, 54);
 }
 
 .TextIconClass {
@@ -549,7 +572,7 @@ body {
   background-color: rgb(27, 27, 27);
   text-shadow: 0 1px 2px silver;
   font-weight: bold;
-  z-index: 2
+  z-index: 2;
 }
 
 #infoBox p, span {
